// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopTeaser renders correctly: ProductTeaser 1`] = `
.c11 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c14 {
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(24px * 3);
  -webkit-line-clamp: 3;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c19 {
  color: #CCCCCC;
  font-size: 14px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c12 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c28 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c28 img {
  height: 32px;
  object-fit: contain;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #999999;
  border: none;
  height: 100%;
  width: 100%;
}

.c7 h1,
.c7 h2,
.c7 h3,
.c7 h4,
.c7 h5,
.c7 h6 {
  color: #FFFFFF;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding: 8px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.07),0 2px 1px -1px rgba(0,0,0,0.06),0 1px 3px 0 rgba(0,0,0,0.10);
  color: #000000;
  background-color: #FFFFFF;
  border-bottom-width: 0px;
  border-top-width: 0px;
  border-right-width: 0px;
  border-left-width: 0px;
  border-radius: 4px;
  text-align: center;
  height: 100%;
  width: 100%;
}

.c29 img {
  display: block;
  max-width: 128px !important;
}

.c24 {
  display: none;
}

.c25 {
  margin-left: 8px;
}

.c4 {
  position: relative;
  outline: none;
  width: 100%;
  height: 100%;
}

.c26 {
  position: relative;
  outline: none;
  width: 100%;
}

.c18 {
  color: #666666;
  border-color: #E5E5E5;
  border-width: 1px;
  border-radius: 25px;
  border-style: solid;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin-right: 16px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c0::after {
  content: '';
  position: absolute;
  display: block;
  bottom: -2px;
  height: 1px;
  left: 0;
  width: calc(100%);
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c0:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c2 {
  width: 100%;
  height: 100%;
}

.c2 .c23 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  right: 0;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-filter: drop-shadow(0 1px 1px gray);
  filter: drop-shadow(0 1px 1px gray);
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 .c3:hover .c23 {
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  width: 100%;
  height: 100%;
  outline: none;
}

.c5 .c6 {
  overflow: visible;
  overflow-x: hidden;
}

.c1 {
  width: 100%;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c8 {
  cursor: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  padding: 16px 0 0 0;
}

.c10 {
  text-align: left;
}

.c13 {
  margin: 8px 0 0 0;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
  min-height: 250px;
  height: 250px;
}

.c20 img {
  object-fit: contain;
  max-height: 200px;
}

.c22 {
  position: absolute;
  width: calc(100% + 16px);
  right: 16px;
  height: 100%;
  -webkit-transform: skew(-10.3deg);
  -ms-transform: skew(-10.3deg);
  transform: skew(-10.3deg);
}

.c22::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-image: url('public/images/small.jpg');
}

.c22::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  -webkit-filter: blur(8px);
  filter: blur(8px);
  background-image: url('public/images/small.jpg?q=1');
  background-color: #00C8DC;
}

.c21 {
  overflow: hidden;
  position: absolute;
  right: -24px;
  width: 100%;
  -webkit-transform: skew(10.3deg);
  -ms-transform: skew(10.3deg);
  transform: skew(10.3deg);
  margin-top: 0;
  height: 250px;
  border-bottom-left-radius: 50px;
  border-top-left-radius: 10px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
}

.c16 {
  max-height: calc(32px * 2);
  overflow: hidden;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c16 .c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0;
  margin-top: 8px;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c12 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c12 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media (min-width:1232px) {
  .c12 {
    font-size: 75px;
    line-height: 80px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c28 {
    max-width: auto;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c28 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media (min-width:512px) {
  .c24 {
    position: absolute;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    z-index: 1;
    right: 0;
    top: -24px;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

@media (min-width:512px) {

}

@media (min-width:512px) {

}

@media (min-width:512px) {
  .c2 .c23 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:752px) {
  .c8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c9 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding: 0 24px 0 0;
  }
}

@media (min-width:752px) {
  .c10 {
    width: 100%;
    position: relative;
    padding-top: 24px;
    z-index: 2;
  }
}

@media (min-width:752px) {
  .c13 {
    margin: 16px 0 0 0;
  }
}

@media (min-width:752px) {
  .c20 {
    height: 354px;
  }
}

@media (min-width:752px) {
  .c20 img {
    max-height: 300px;
    padding: 0;
  }
}

@media (min-width:752px) {
  .c20 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:1232px) {
  .c20 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:752px) {
  .c21 {
    right: -32px;
    height: 354px;
    border-bottom-left-radius: 70.8px;
    border-top-left-radius: 14.16px;
  }
}

<a
  className="c0 c1"
  color="grey4"
  target="_self"
>
  <div
    className="c2"
  >
    <div
      className="c3 c4 c5"
    >
      <div
        className="c6 c7"
        display="flex"
        elevation={0}
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <div
              className="c10"
            >
              <p
                className="c11 c12"
                color="primary"
                fontFamily="featured"
                fontSize="xxxxl"
                spacing="base"
              >
                High standards require sensible processes
              </p>
              <div
                className="c13"
              >
                <span
                  className="c14"
                  color="grey5"
                  fontSize="sm"
                >
                  Well, the answer is obvious: “He hasn’t died yet.” Fortunately, for us, Munger has kept on ticking.
                </span>
              </div>
              <div
                className="c15"
              >
                <div
                  className="c16"
                >
                  <div
                    className="c17 c18"
                  >
                    <span
                      className="c19"
                      color="grey3"
                      fontSize="xs"
                    >
                      73 products
                    </span>
                  </div>
                  <div
                    className="c17 c18"
                  >
                    <span
                      className="c19"
                      color="grey3"
                      fontSize="xs"
                    >
                      23hours 18minutes
                    </span>
                  </div>
                  <div
                    className="c17 c18"
                  >
                    <span
                      className="c19"
                      color="grey3"
                      fontSize="xs"
                    >
                      3% completed
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c20"
          >
            <div
              className="c21"
              height={140}
            >
              <div
                className="c22"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="c23 c24"
      >
        <div
          className="c25"
        >
          <div
            className="c3 c26"
          >
            <div
              className="c6 c27"
              display="flex"
              elevation={1}
              shape="rounded-small"
            >
              <div
                className="c28 c29"
                height="32px"
                width="auto"
              >
                <picture
                  style={
                    Object {
                      "height": "32px",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="32px"
                    loading="eager"
                    src="public/images/featured_products/featured_product_01.png"
                    width="auto"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c25"
        >
          <div
            className="c3 c26"
          >
            <div
              className="c6 c27"
              display="flex"
              elevation={1}
              shape="rounded-small"
            >
              <div
                className="c28 c29"
                height="32px"
                width="auto"
              >
                <picture
                  style={
                    Object {
                      "height": "32px",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="32px"
                    loading="eager"
                    src="public/images/featured_products/featured_product_03.png"
                    width="auto"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`TopTeaser renders correctly: default ProductTeaser with maximum configuration 1`] = `
.c11 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c14 {
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(24px * 3);
  -webkit-line-clamp: 3;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c19 {
  color: #CCCCCC;
  font-size: 14px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c12 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c25 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c25 img {
  height: 100%;
  object-fit: cover;
}

.c31 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c31 img {
  height: 32px;
  object-fit: contain;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #999999;
  border: none;
  height: 100%;
  width: 100%;
}

.c7 h1,
.c7 h2,
.c7 h3,
.c7 h4,
.c7 h5,
.c7 h6 {
  color: #FFFFFF;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding: 8px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.07),0 2px 1px -1px rgba(0,0,0,0.06),0 1px 3px 0 rgba(0,0,0,0.10);
  color: #000000;
  background-color: #FFFFFF;
  border-bottom-width: 0px;
  border-top-width: 0px;
  border-right-width: 0px;
  border-left-width: 0px;
  border-radius: 4px;
  text-align: center;
  height: 100%;
  width: 100%;
}

.c32 img {
  display: block;
  max-width: 128px !important;
}

.c27 {
  display: none;
}

.c28 {
  margin-left: 8px;
}

.c4 {
  position: relative;
  outline: none;
  width: 100%;
  height: 100%;
}

.c29 {
  position: relative;
  outline: none;
  width: 100%;
}

.c18 {
  color: #666666;
  border-color: #E5E5E5;
  border-width: 1px;
  border-radius: 25px;
  border-style: solid;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin-right: 16px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c0::after {
  content: '';
  position: absolute;
  display: block;
  bottom: -2px;
  height: 1px;
  left: 0;
  width: calc(100%);
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c0:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c2 {
  width: 100%;
  height: 100%;
}

.c2 .c26 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  right: 0;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-filter: drop-shadow(0 1px 1px gray);
  filter: drop-shadow(0 1px 1px gray);
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 .c3:hover .c26 {
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  width: 100%;
  height: 100%;
  outline: none;
}

.c5 .c6 {
  overflow: visible;
  overflow-x: hidden;
}

.c1 {
  width: 100%;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c8 {
  cursor: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  height: 100%;
  padding: 16px 0 0 0;
}

.c10 {
  text-align: left;
}

.c13 {
  margin: 8px 0 0 0;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
  min-height: 250px;
  height: 250px;
}

.c20 img {
  object-fit: contain;
  max-height: 200px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  padding: 8px;
  height: 250px;
}

.c23 img {
  height: 100%;
}

.c23 .c24 {
  height: 100%;
}

.c22 {
  position: absolute;
  width: calc(100% + 16px);
  right: 16px;
  height: 100%;
  -webkit-transform: skew(-10.3deg);
  -ms-transform: skew(-10.3deg);
  transform: skew(-10.3deg);
}

.c22::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-image: url('public/images/small.jpg');
}

.c22::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-image: url('public/images/small.jpg?q=1');
  background-color: #00C8DC;
}

.c21 {
  overflow: hidden;
  position: absolute;
  right: -24px;
  width: 100%;
  -webkit-transform: skew(10.3deg);
  -ms-transform: skew(10.3deg);
  transform: skew(10.3deg);
  margin-top: 0;
  height: 250px;
  border-bottom-left-radius: 50px;
  border-top-left-radius: 10px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
}

.c16 {
  max-height: calc(32px * 2);
  overflow: hidden;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c16 .c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0;
  margin-top: 8px;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c12 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c12 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media (min-width:1232px) {
  .c12 {
    font-size: 75px;
    line-height: 80px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c25 {
    max-width: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c25 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c31 {
    max-width: auto;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c31 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media (min-width:512px) {
  .c27 {
    position: absolute;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    z-index: 1;
    right: 0;
    top: -24px;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

@media (min-width:512px) {

}

@media (min-width:512px) {

}

@media (min-width:512px) {
  .c2 .c26 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:752px) {
  .c8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c9 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding: 0 24px 0 0;
  }
}

@media (min-width:752px) {
  .c10 {
    width: 100%;
    position: relative;
    padding-top: 24px;
    z-index: 2;
  }
}

@media (min-width:752px) {
  .c13 {
    margin: 16px 0 0 0;
  }
}

@media (min-width:752px) {
  .c20 {
    height: 354px;
  }
}

@media (min-width:752px) {
  .c20 img {
    max-height: 300px;
    padding: 0;
  }
}

@media (min-width:752px) {
  .c20 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:1232px) {
  .c20 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:752px) {
  .c23 {
    margin: 0 24px 0 40px;
    height: unset;
  }
}

@media (min-width:752px) {
  .c21 {
    right: -32px;
    height: 354px;
    border-bottom-left-radius: 70.8px;
    border-top-left-radius: 14.16px;
  }
}

<a
  className="c0 c1"
  color="grey4"
  target="_self"
>
  <div
    className="c2"
  >
    <div
      className="c3 c4 c5"
    >
      <div
        className="c6 c7"
        display="flex"
        elevation={0}
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <div
              className="c10"
            >
              <p
                className="c11 c12"
                color="primary"
                fontFamily="featured"
                fontSize="xxxxl"
                spacing="base"
              >
                High standards require sensible processes
              </p>
              <div
                className="c13"
              >
                <span
                  className="c14"
                  color="grey5"
                  fontSize="sm"
                >
                  Well, the answer is obvious: “He hasn’t died yet.” Fortunately, for us, Munger has kept on ticking.
                </span>
              </div>
              <div
                className="c15"
              >
                <div
                  className="c16"
                >
                  <div
                    className="c17 c18"
                  >
                    <span
                      className="c19"
                      color="grey3"
                      fontSize="xs"
                    >
                      73 products
                    </span>
                  </div>
                  <div
                    className="c17 c18"
                  >
                    <span
                      className="c19"
                      color="grey3"
                      fontSize="xs"
                    >
                      23hours 18minutes
                    </span>
                  </div>
                  <div
                    className="c17 c18"
                  >
                    <span
                      className="c19"
                      color="grey3"
                      fontSize="xs"
                    >
                      3% completed
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c20"
          >
            <div
              className="c21"
              height={140}
            >
              <div
                className="c22"
              />
            </div>
            <div
              className="c23"
            >
              <div
                className="c24 c25"
                height="100%"
                width="100%"
              >
                <picture
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="100%"
                    loading="eager"
                    src="public/images/teasers/product02.png"
                    width="100%"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c26 c27"
      >
        <div
          className="c28"
        >
          <div
            className="c3 c29"
          >
            <div
              className="c6 c30"
              display="flex"
              elevation={1}
              shape="rounded-small"
            >
              <div
                className="c24 c31 c32"
                height="32px"
                width="auto"
              >
                <picture
                  style={
                    Object {
                      "height": "32px",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="32px"
                    loading="eager"
                    src="public/images/featured_products/featured_product_01.png"
                    width="auto"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c28"
        >
          <div
            className="c3 c29"
          >
            <div
              className="c6 c30"
              display="flex"
              elevation={1}
              shape="rounded-small"
            >
              <div
                className="c24 c31 c32"
                height="32px"
                width="auto"
              >
                <picture
                  style={
                    Object {
                      "height": "32px",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="32px"
                    loading="eager"
                    src="public/images/featured_products/featured_product_03.png"
                    width="auto"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`TopTeaser renders correctly: default ProductTeaser with minimal configuration 1`] = `
.c10 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c13 {
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(24px * 5);
  -webkit-line-clamp: 5;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c11 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #999999;
  border: none;
  height: 100%;
  width: 100%;
}

.c6 h1,
.c6 h2,
.c6 h3,
.c6 h4,
.c6 h5,
.c6 h6 {
  color: #FFFFFF;
}

.c3 {
  position: relative;
  outline: none;
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c0::after {
  content: '';
  position: absolute;
  display: block;
  bottom: -2px;
  height: 1px;
  left: 0;
  width: calc(100%);
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c0:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c2 {
  width: 100%;
  height: 100%;
}

.c4 {
  width: 100%;
  height: 100%;
  outline: none;
}

.c4 .c5 {
  overflow: visible;
  overflow-x: hidden;
}

.c1 {
  width: 100%;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c7 {
  cursor: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  padding: 16px 0 0 0;
}

.c9 {
  text-align: left;
}

.c12 {
  margin: 8px 0 0 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
  min-height: 250px;
  height: 250px;
}

.c14 img {
  object-fit: contain;
  max-height: 200px;
}

.c15 {
  position: absolute;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url('');
  background-position: 50%;
  background-color: #00C8DC;
  width: 100%;
  height: 100%;
  z-index: -1;
  min-height: 256px;
}

.c15::before {
  content: '';
  position: absolute;
  display: block;
  background: #fff;
  width: 100%;
  height: 65px;
  bottom: -45px;
  -webkit-transform: skew(0,-2.5deg);
  -ms-transform: skew(0,-2.5deg);
  transform: skew(0,-2.5deg);
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c11 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c11 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media (min-width:1232px) {
  .c11 {
    font-size: 75px;
    line-height: 80px;
  }
}

@media (min-width:512px) {

}

@media (min-width:512px) {

}

@media (min-width:752px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c8 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding: 0 24px 0 0;
  }
}

@media (min-width:752px) {
  .c9 {
    width: 100%;
    position: relative;
    padding-top: 24px;
    z-index: 2;
  }
}

@media (min-width:752px) {
  .c12 {
    margin: 16px 0 0 0;
  }
}

@media (min-width:752px) {
  .c14 {
    height: 354px;
  }
}

@media (min-width:752px) {
  .c14 img {
    max-height: 300px;
    padding: 0;
  }
}

@media (min-width:752px) {
  .c14 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:1232px) {
  .c14 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c15 {
    left: 0;
  }
}

@media (min-width:752px) {
  .c15::before {
    width: 100%;
    height: 65px;
    bottom: -55px;
    -webkit-transform: skew(0,-2.5deg);
    -ms-transform: skew(0,-2.5deg);
    transform: skew(0,-2.5deg);
    top: auto;
    left: auto;
  }
}

<a
  className="c0 c1"
  color="grey4"
  target="_self"
>
  <div
    className="c2"
  >
    <div
      className="c3 c4"
    >
      <div
        className="c5 c6"
        display="flex"
        elevation={0}
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              <p
                className="c10 c11"
                color="primary"
                fontFamily="featured"
                fontSize="xxxxl"
                spacing="base"
              >
                High standards require sensible processes
              </p>
              <div
                className="c12"
              >
                <span
                  className="c13"
                  color="grey5"
                  fontSize="sm"
                />
              </div>
            </div>
          </div>
          <div
            className="c14"
          >
            <div
              className="c15"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;
